# distributed-matmult

./: README.md  manual.md
async_matmult/: Cargo.toml
async_matmult/src/: main.rs
distributed-matmult/: .gitignore  curl_cmd.bash  docker-compose.yml
distributed-matmult/broker/: .env.example  Cargo.toml  Dockerfile
distributed-matmult/broker/src/: main.rs  types.rs
distributed-matmult/worker/: Cargo.toml  Dockerfile
distributed-matmult/worker/src/: main.rs  types.rs
hydro_matmult/: Cargo.toml
hydro_matmult/examples/: cluster_matmult.rs  distributed_matmult.rs  sync_matmult.rs
hydro_matmult/src/: cluster_matmult.rs  distributed_matmult.rs  lib.rs  sync_matmult.rs
sync-matmult/: Cargo.toml
sync-matmult/src/: main.rs
