[package]
name = "broker"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = "1.13.1"
futures = "0.3.31"
reqwest = {version = "0.12.15", features = ["json"]}
serde_json = "1.0.140"
tokio = { version = "1.28", features = ["full"] }
warp = "0.3.7"
serde = { version = "1.0.219", features = ["derive"] }
dotenvy = "0.15.7"

